--- a/Main/index.html
+++ b/Main/index.html
@@ -1143,7 +1143,7 @@
                                  <div class="hero-content  text-center ">
                                     <h2>HAIR OIL</h2>
                                     <h1>FOR GLOSSY AND <br>STYLISH HAIR</h1>
-                                    <a class="btn btn-round btn-lg btn-theme btn_" href="collections.html">SHOP NOW</a>
+                                    <a class="btn btn-round btn-lg btn-theme btn_" href="">SHOP NOW</a>
                                  </div>
                               </div>
                            </div>
@@ -1156,7 +1156,7 @@
                                  <div class="hero-content  text-center ">
                                     <h2>HAIR OIL</h2>
                                     <h1>FOR GLOSSY AND <br>STYLISH HAIR</h1>
-                                    <a class="btn  btn_ btn-round btn-lg btn-theme" href="collections.html">SHOP NOW</a>
+                                    <a class="btn  btn_ btn-round btn-lg btn-theme" href="">SHOP NOW</a>
                                  </div>
                               </div>
                               <div class="col-md-7 col-6">
